[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "cbots-7-advancedbotoriginal"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
textblob = "^0.15.3"
[tool.poetry.dev-dependencies]
